# orbit

./: .gitignore  Cargo.toml  FEATURES.md  README.md
aur/: .SRCINFO  PKGBUILD  orbit-wifi-0.1.1-1-x86_64.pkg.tar.zst  orbit-wifi-0.1.2-1-x86_64.pkg.tar.zst  orbit-wifi-debug-0.1.1-1-x86_64.pkg.tar.zst  orbit.service
aur/pkg/orbit-wifi/: .BUILDINFO  .INSTALL  .MTREE  .PKGINFO
aur/pkg/orbit-wifi-debug/: .BUILDINFO  .MTREE  .PKGINFO
aur/pkg/orbit-wifi/usr/share/doc/orbit-wifi/: README.md
aur/src/: orbit.service
aur/src/orbit-0.1.1/: AGENTS.md
aur/src/orbit-0.1.1/aur/: .SRCINFO  PKGBUILD
aur/src/orbit-0.1.1/src/: config.rs  main.rs  theme.rs
aur/src/orbit-0.1.1/src/app/: daemon.rs
aur/src/orbit-0.1.1/src/dbus/: bluez.rs  mod.rs
aur/src/orbit-0.1.1/src/ui/: network_list.rs  password_dialog.rs  saved_networks_list.rs
config/: config.example.toml
scripts/: sync-orbit-theme.sh
src/: config.rs  lib.rs  main.rs  theme.rs
src/app/: daemon.rs  mod.rs
src/dbus/: bluez.rs  mod.rs  network_manager.rs
src/ui/: device_list.rs  header.rs  mod.rs  network_list.rs  saved_networks_list.rs  vpn_list.rs  window.rs
