[package]
name = "orbit"
version = "0.1.0"
edition = "2021"
description = "A WiFi/Bluetooth manager for Wayland"
authors = ["Amadeus"]
license = "MIT"

[dependencies]
gtk4 = "0.9"
gtk4-layer-shell = "0.4"
zbus = { version = "4.4", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
async-channel = "2"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
strip = true
